--- a/src/02_Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
+++ b/src/02_Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Volo.Abp.Core" Version="4.2.1" />
+  </ItemGroup>
+
 </Project>
