--- a/src/IngosAbpTemplate/IngosAbpTemplate.HttpApi.csproj
+++ b/src/IngosAbpTemplate/IngosAbpTemplate.HttpApi.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\03_Application\IngosAbpTemplate.Application\IngosAbpTemplate.Application.csproj" />
   </ItemGroup>
 
 </Project>
