add sample domain entity and integrate ef core

--- a/src/01_Infrastructure/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
+++ b/src/01_Infrastructure/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Volo.Abp.Core" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\02_Domain\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
