--- a/src/IngosAbpTemplate.HttpApi/appsettings.json
+++ b/src/IngosAbpTemplate.HttpApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Default": "server=localhost;database=Ingos_Abp_Template;user=root;password=123456@sql;port=3306;persistsecurityinfo=True;"
+  },
   "AllowedHosts": "*"
 }
