--- a/src/02_Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
+++ b/src/02_Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Core" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="4.2.1" />
   </ItemGroup>
 
 </Project>
