ef core data persistence adjustment

--- a/src/01_Infrastructure/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
+++ b/src/01_Infrastructure/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
@@ -5,12 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="4.2.1" />
     <PackageReference Include="Volo.Abp.Core" Version="4.2.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
