add base module reference to web api class lib

--- a/src/IngosAbpTemplate.HttpApi/Properties/launchSettings.json
+++ b/src/IngosAbpTemplate.HttpApi/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "IngosAbpTemplate": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
