--- a/src/IngosAbpTemplate.HttpApi/appsettings.json
+++ b/src/IngosAbpTemplate.HttpApi/appsettings.json
@@ -6,8 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "App": {
+    "CorsOrigins": "https://*.ingos-abp-template.com"
+  },
   "ConnectionStrings": {
     "Default": "server=localhost;database=Ingos_Abp_Template;user=root;password=123456@sql;port=3306;persistsecurityinfo=True;"
+  },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
+  "AuthServer": {
+    "Authority": "https://localhost:44322",
+    "RequireHttpsMetadata": "true",
+    "SwaggerClientId": "IngosAbpTemplate_Swagger",
+    "SwaggerClientSecret": "1q2w3e*"
   },
   "AllowedHosts": "*"
 }
