--- a/src/IngosAbpTemplate.HttpApi/IngosAbpTemplate.HttpApi.csproj
+++ b/src/IngosAbpTemplate.HttpApi/IngosAbpTemplate.HttpApi.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.3" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.2.1" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.2.1" />
   </ItemGroup>
 
