--- a/Ingos.Abp.Templates.csproj
+++ b/Ingos.Abp.Templates.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion>
     <PackageId>Ingos.Abp.Templates</PackageId>
     <Title>Ingos.Abp.Templates</Title>
     <Authors>Danvic Wang</Authors>
-    <Description>Ingos web api template based on abp framework.</Description>
-    <PackageTags>dotnet-new;templates;abp</PackageTags>
+    <Description>Ingos Web API with ABP Framework</Description>
+    <PackageTags>dotnet-new;templates;abp;domain-driven-design</PackageTags>
 
     <TargetFramework>net5.0</TargetFramework>
 
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**;templates\.vs\**" />
+    <Content Include="templates\**\*" Exclude="templates\.vs\**;templates\**\Logs\**;templates\**\bin\**;templates\**\obj\**;" />
     <Compile Remove="**\*" />
   </ItemGroup>
 
