Add permission management module

--- a/templates/src/IngosAbpTemplate.HttpApi.Host/appsettings.json
+++ b/templates/src/IngosAbpTemplate.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.IngosAbpTemplate.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=IngosAbpTemplate;Uid=root;Pwd=your-password"
+    "Default": "Server=127.0.0.1;Port=3306;Database=Ingos-Abp-Template;Uid=root;Pwd=123456@sql"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
