--- a/templates/src/Application/IngosAbpTemplate.Application.Contracts/IngosAbpTemplate.Application.Contracts.csproj
+++ b/templates/src/Application/IngosAbpTemplate.Application.Contracts/IngosAbpTemplate.Application.Contracts.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
