--- a/templates/src/Application/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
+++ b/templates/src/Application/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
