--- a/templates/src/Domain/IngosAbpTemplate.Domain.Shared/IngosAbpTemplate.Domain.Shared.csproj
+++ b/templates/src/Domain/IngosAbpTemplate.Domain.Shared/IngosAbpTemplate.Domain.Shared.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.*" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.Validation" Version="4.2.2" />
   </ItemGroup>
 </Project>
