--- a/templates/src/Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
+++ b/templates/src/Domain/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Volo.Abp.Emailing" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
