--- a/templates/src/Infrastructure/IngosAbpTemplate.EntityFrameworkCore/IngosAbpTemplate.EntityFrameworkCore.csproj
+++ b/templates/src/Infrastructure/IngosAbpTemplate.EntityFrameworkCore/IngosAbpTemplate.EntityFrameworkCore.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
