--- a/templates/src/IngosAbpTemplate.HttpApi.Host/IngosAbpTemplate.HttpApi.Host.csproj
+++ b/templates/src/IngosAbpTemplate.HttpApi.Host/IngosAbpTemplate.HttpApi.Host.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Volo.Abp.Autofac" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.2.2" />
   </ItemGroup>
 
