--- a/templates/src/IngosAbpTemplate.EntityFrameworkCore/IngosAbpTemplate.EntityFrameworkCore.csproj
+++ b/templates/src/IngosAbpTemplate.EntityFrameworkCore/IngosAbpTemplate.EntityFrameworkCore.csproj
@@ -13,10 +13,12 @@
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="4.2.2" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
+    <ProjectReference Include="..\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
   </ItemGroup>
 </Project>
