--- a/templates/src/IngosAbpTemplate.Application.Contracts/IngosAbpTemplate.Application.Contracts.csproj
+++ b/templates/src/IngosAbpTemplate.Application.Contracts/IngosAbpTemplate.Application.Contracts.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>IngosAbpTemplate.Application.Contracts</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>../IngosAbpTemplate.HttpApi.Host/Shared/Application.Contracts.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="4.2.2" />
