Swagger function detail adjustment

--- a/templates/src/IngosAbpTemplate.HttpApi.Host/IngosAbpTemplate.HttpApi.Host.csproj
+++ b/templates/src/IngosAbpTemplate.HttpApi.Host/IngosAbpTemplate.HttpApi.Host.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>./Shared/HttpApi.Host.xml</DocumentationFile>
+    <DocumentationFile>./wwwroot/api-doc/HttpApi.Host.xml</DocumentationFile>
     <OutputPath></OutputPath>
   </PropertyGroup>
 
@@ -44,18 +44,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Shared\" />
+    <Folder Include="wwwroot\api-doc\" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Shared\Application.Contracts.xml">
+    <Content Update="wwwroot\api-doc\Application.Contracts.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Shared\Application.xml">
+    </Content>
+    <Content Update="wwwroot\api-doc\Application.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Shared\HttpApi.Host.xml">
+    </Content>
+    <Content Update="wwwroot\api-doc\HttpApi.Host.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
+    <Content Update="wwwroot\swagger-ui\export.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\swagger-ui\rapipdf-min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
