--- a/templates/src/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
+++ b/templates/src/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>../IngosAbpTemplate.HttpApi.Host/Shared/Application.xml</DocumentationFile>
+    <DocumentationFile>../IngosAbpTemplate.HttpApi.Host/wwwroot/api-doc/Application.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
