--- a/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
+++ b/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>IngosAbpTemplate.HttpApi.Host</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>IngosAbpTemplate-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -31,9 +30,9 @@
   <ItemGroup>
     <ProjectReference Include="..\IngosAbpTemplate.Application.Contracts\IngosAbpTemplate.Application.Contracts.csproj" />
     <ProjectReference Include="..\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
-    <ProjectReference Include="..\IngosAbpTemplate.EntityFrameworkCore\IngosAbpTemplate.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\IngosAbpTemplate.Domain.Shared\IngosAbpTemplate.Domain.Shared.csproj" />
     <ProjectReference Include="..\IngosAbpTemplate.Application\IngosAbpTemplate.Application.csproj" />
+    <ProjectReference Include="..\IngosAbpTemplate.Infrastructure\IngosAbpTemplate.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,12 +54,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\api-doc\HttpApi.Host.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\swagger-ui\export.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\swagger-ui\rapipdf-min.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
