--- a/templates/src/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
+++ b/templates/src/IngosAbpTemplate.Infrastructure/IngosAbpTemplate.Infrastructure.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>IngosAbpTemplate.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,8 +13,7 @@
     <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.2.2" />
     <PackageReference Condition="'$(MsSQL)' == 'True'" Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.2.2" />
-    <PackageReference Condition="'$(PgSQL)' == 'True'" Include="Volo.Abp.EntityFrameworkCore.PostgreSql"
-                   Version="4.2.2" />
+    <PackageReference Condition="'$(PgSQL)' == 'True'" Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.2.2" />
   </ItemGroup>
 
