Fix xml generate and load error

--- a/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
+++ b/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
@@ -9,8 +9,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>./wwwroot/api-doc/HttpApi.Host.xml</DocumentationFile>
+    <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
     <OutputPath></OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,21 +44,24 @@
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
+    <Content Update="wwwroot\api-doc\IngosAbpTemplate.API.xml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.xml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.Contracts.xml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\api-doc\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="wwwroot\api-doc\Application.Contracts.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\api-doc\Application.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\api-doc\HttpApi.Host.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 </Project>
