--- a/templates/src/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
+++ b/templates/src/IngosAbpTemplate.Application/IngosAbpTemplate.Application.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.2.2" />
   </ItemGroup>
