--- a/templates/src/IngosAbpTemplate.API/appsettings.json
+++ b/templates/src/IngosAbpTemplate.API/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.IngosAbpTemplate.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=Ingos_Abp_Template;Uid=root;Pwd=123456@sql"
+    "Default": "Server=127.0.0.1;Port=3306;Database=Ingos_Abp_Template;Uid=root;Pwd=Change_To_Your_Password"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
