--- a/templates/src/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
+++ b/templates/src/IngosAbpTemplate.Domain/IngosAbpTemplate.Domain.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapr.Client" Version="1.1.0" />
     <PackageReference Include="Volo.Abp.Emailing" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="4.2.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="4.2.2" />
