Use jwt token authorize instead

--- a/templates/src/IngosAbpTemplate.API/appsettings.json
+++ b/templates/src/IngosAbpTemplate.API/appsettings.json
@@ -9,10 +9,10 @@
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44316",
-    "RequireHttpsMetadata": "true",
-    "SwaggerClientId": "IngosAbpTemplate_Swagger",
-    "SwaggerClientSecret": "1q2w3e*"
+    "Issuer": "https://yuiter.com",
+    "Audience": "https://yuiter.com",
+    "Secret": "lkbmnvqimdsvvgnyqwwqnvnkvqjbpldg",
+    "Expiration": "20"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "kYbT9Typ5S2SlzHA"
