Code detail check and add k8s file

--- a/templates/src/IngosAbpTemplate.API/appsettings.json
+++ b/templates/src/IngosAbpTemplate.API/appsettings.json
@@ -1,21 +1,14 @@
 {
   "App": {
+    "ApplicationName": "IngosAbpTemplate",
     "CorsOrigins": "https://*.IngosAbpTemplate.com,http://localhost:4200"
   },
   "ConnectionStrings": {
     "Default": "Server=127.0.0.1;Port=3306;Database=Ingos_Abp_Template;Uid=root;Pwd=Change_To_Your_Password"
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
-  },
-  "AuthServer": {
-    "Issuer": "https://yuiter.com",
-    "Audience": "https://yuiter.com",
-    "Secret": "lkbmnvqimdsvvgnyqwwqnvnkvqjbpldg",
-    "Expiration": "20"
-  },
-  "StringEncryption": {
-    "DefaultPassPhrase": "kYbT9Typ5S2SlzHA"
+    "Configuration": "127.0.0.1",
+    "KeyPrefix": "IngosAbpTemplate"
   },
   "Settings": {
     "Abp.Mailing.Smtp.Host": "127.0.0.1",
