Dockerfile and build.sh file adjustment

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -4,16 +4,13 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
-WORKDIR /src
-COPY ["src/*", "IngosAbpTemplate.API/"]
-RUN dotnet restore "IngosAbpTemplate.API/IngosAbpTemplate.API.csproj"
-WORKDIR "/IngosAbpTemplate.API"
-RUN dotnet build "IngosAbpTemplate.API.csproj" -c Release -o /app/build
+COPY ./ /app
+WORKDIR /app/src/IngosAbpTemplate.API
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish --no-restore
 
-#FROM build AS publish
-#RUN dotnet publish "IngosAbpTemplate.API.csproj" -c Release -o /app/publish
-
-#FROM base AS final
-#WORKDIR /app
-#COPY --from=publish /app/publish .
-#ENTRYPOINT ["dotnet", "IngosAbpTemplate.API.dll"]
+FROM base AS final
+WORKDIR /app
+COPY --from=build /app/publish .
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+ENTRYPOINT ["dotnet", "IngosAbpTemplate.API.dll"]
