Abp internal database table naming conversion test

--- a/templates/src/IngosAbpTemplate.API/appsettings.json
+++ b/templates/src/IngosAbpTemplate.API/appsettings.json
@@ -4,7 +4,7 @@
     "CorsOrigins": "https://*.IngosAbpTemplate.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=Ingos_Abp_Template;Uid=root;Pwd=Change_To_Your_Password"
+    "Default": "Server=127.0.0.1;Port=3306;Database=Template;Uid=root;Pwd=123456@sql"
   },
   "Redis": {
     "Configuration": "127.0.0.1",
