--- a/Ingos.Abp.Templates.csproj
+++ b/Ingos.Abp.Templates.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <PackageVersion>1.0.6</PackageVersion>
+    <PackageVersion>1.0.7</PackageVersion>
     <PackageId>Ingos.Abp.Templates</PackageId>
     <Title>Ingos.Abp.Templates</Title>
     <Authors>Danvic Wang</Authors>
-    <Description>Ingos Web API with ABP Framework</Description>
+    <Description>Ingos Web API Template with ABP Framework</Description>
     <PackageTags>dotnet-new;templates;abp;domain-driven-design;architecture;dapr</PackageTags>
 
     <TargetFramework>net5.0</TargetFramework>
