--- a/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
+++ b/templates/src/IngosAbpTemplate.API/IngosAbpTemplate.API.csproj
@@ -1,71 +1,74 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <PreserveCompilationReferences>true</PreserveCompilationReferences>
-    <UserSecretsId>IngosAbpTemplate-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+        <PreserveCompilationReferences>true</PreserveCompilationReferences>
+        <UserSecretsId>IngosAbpTemplate-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..</DockerfileContext>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
-    <OutputPath></OutputPath>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
+        <OutputPath></OutputPath>
+    </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DocumentationFile>./wwwroot/api-doc/IngosAbpTemplate.API.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapr.AspNetCore" Version="1.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.10" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.*" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.2" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Dapr.AspNetCore" Version="1.4.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.11" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.0" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="4.4.3" />
+        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.3" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.4.3" />
+        <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.3" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\IngosAbpTemplate.Application.Contracts\IngosAbpTemplate.Application.Contracts.csproj" />
-    <ProjectReference Include="..\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
-    <ProjectReference Include="..\IngosAbpTemplate.Domain.Shared\IngosAbpTemplate.Domain.Shared.csproj" />
-    <ProjectReference Include="..\IngosAbpTemplate.Application\IngosAbpTemplate.Application.csproj" />
-    <ProjectReference Include="..\IngosAbpTemplate.Infrastructure\IngosAbpTemplate.Infrastructure.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\IngosAbpTemplate.Application.Contracts\IngosAbpTemplate.Application.Contracts.csproj" />
+        <ProjectReference Include="..\IngosAbpTemplate.Domain\IngosAbpTemplate.Domain.csproj" />
+        <ProjectReference Include="..\IngosAbpTemplate.Domain.Shared\IngosAbpTemplate.Domain.Shared.csproj" />
+        <ProjectReference Include="..\IngosAbpTemplate.Application\IngosAbpTemplate.Application.csproj" />
+        <ProjectReference Include="..\IngosAbpTemplate.Infrastructure\IngosAbpTemplate.Infrastructure.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="Logs\**" />
-    <Content Remove="Logs\**" />
-    <EmbeddedResource Remove="Logs\**" />
-    <None Remove="Logs\**" />
-    <Content Update="wwwroot\api-doc\IngosAbpTemplate.API.xml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.xml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.Contracts.xml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Logs\**" />
+        <Content Remove="Logs\**" />
+        <EmbeddedResource Remove="Logs\**" />
+        <None Remove="Logs\**" />
+        <Content Update="wwwroot\api-doc\IngosAbpTemplate.API.xml">
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.xml">
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Update="wwwroot\api-doc\IngosAbpTemplate.Application.Contracts.xml">
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\api-doc\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="wwwroot\api-doc\" />
+    </ItemGroup>
 </Project>
