--- a/templates/src/IngosAbpTemplate.API/appsettings.json
+++ b/templates/src/IngosAbpTemplate.API/appsettings.json
@@ -4,7 +4,7 @@
     "CorsOrigins": "https://*.IngosAbpTemplate.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=Template;Uid=root;Pwd=Change_To_Your_Password_Here"
+    "Default": "Server=Server Address;Port=3306;Database=Change_To_Your_Database_Here;Uid=root;Pwd=Change_To_Your_Password_Here"
   },
   "Redis": {
     "Configuration": "127.0.0.1",
